--- a/css/portfolio.css
+++ b/css/portfolio.css
@@ -30,6 +30,31 @@ button > span {
   padding-right: 7px;
 }
 
+.no-scroll {
+  overflow: hidden;
+}
+
+.logo__part1 {
+  color: #2196F3;
+  font-size: 26px;
+  font-family: Raleway;
+  font-weight: 700;
+  letter-spacing: 0.78px;
+  word-wrap: break-word;
+  margin-right: -5px;
+}
+.logo__part2 {
+  color: black;
+  font-size: 26px;
+  font-family: Raleway;
+  font-weight: 700;
+  letter-spacing: 0.78px;
+  word-wrap: break-word;
+}
+.logo__part2--white {
+  color: white;
+}
+
 .header {
   padding: 25px 0;
   border-bottom: #ECECEC 1px solid;
@@ -144,21 +169,18 @@ button > span {
 .portfolio {
   padding: 95px 0;
 }
-
-.portfolio-filters {
+.portfolio__filters {
   display: flex;
   align-items: center;
   justify-content: center;
   padding-bottom: 51px;
 }
-
-.portfolio-filters-list {
+.portfolio__filters-list {
   display: flex;
   -moz-column-gap: 8px;
        column-gap: 8px;
 }
-
-.portfolio-filters-btn {
+.portfolio__filters-btn {
   font-weight: 500;
   font-size: 16px;
   line-height: 1.625;
@@ -173,42 +195,43 @@ button > span {
   transition-duration: 250ms;
   transition-timing-function: cubic-bezier(0.4, 0, 0.2, 1);
 }
-
-.portfolio-filters-btn:hover {
+.portfolio__filters-btn:hover {
   background-color: #2196F3;
   color: #FFF;
   box-shadow: 0 3px rgba(50, 50, 50, 0.3);
 }
-
-.portfolio-list {
+.portfolio__list {
   display: flex;
   flex-wrap: wrap;
   margin: 0 auto;
   row-gap: 30px;
   justify-content: space-between;
 }
-
-.portfolio-list-item {
+.portfolio__item {
   border: #EEEEEE 1px solid;
   flex-basis: calc((100% - 60px) / 3);
   transition-property: box-shadow;
   transition-duration: 250ms;
   transition-timing-function: cubic-bezier(0.4, 0, 0.2, 1);
 }
-
-.portfolio-list-item:hover {
+.portfolio__item:hover {
   box-shadow: 1px 4px rgba(0, 0, 0, 0.16);
 }
-
-.portfolio-img-border {
+.portfolio__border {
   position: relative;
   overflow: hidden;
   transition-property: background-color, color, box-shadow;
   transition-duration: 250ms;
   transition-timing-function: cubic-bezier(0.4, 0, 0.2, 1);
 }
-
-.overlay {
+.portfolio__border:hover .portfolio__overlay {
+  /* transform: translateY(0); */
+  animation: overlay_show 500ms cubic-bezier(0.25, 0.25, 0.695, 0.49) 0s 1 normal forwards;
+}
+.portfolio__img {
+  width: 100%;
+}
+.portfolio__overlay {
   position: absolute;
   top: 0;
   left: 0;
@@ -227,10 +250,22 @@ button > span {
   font-weight: 400;
   padding: 22px;
 }
-
-.portfolio-img-border:hover .overlay {
-  /* transform: translateY(0); */
-  animation: overlay_show 500ms cubic-bezier(0.25, 0.25, 0.695, 0.49) 0s 1 normal forwards;
+.portfolio__block {
+  padding: 23px;
+}
+.portfolio__title {
+  font-weight: 700;
+  font-size: 18px;
+  line-height: 2;
+  letter-spacing: 6%;
+  color: #212121;
+}
+.portfolio__text {
+  font-weight: 400;
+  font-size: 16px;
+  line-height: 1.875;
+  letter-spacing: 3%;
+  color: #757575;
 }
 
 @keyframes overlay_show {
@@ -250,30 +285,6 @@ button > span {
     transform: translateY(0);
   }
 }
-.portfolio-img {
-  width: 100%;
-}
-
-.portfolio-block-text {
-  padding: 23px;
-}
-
-.portfolio-title {
-  font-weight: 700;
-  font-size: 18px;
-  line-height: 2;
-  letter-spacing: 6%;
-  color: #212121;
-}
-
-.portfolio-text {
-  font-weight: 400;
-  font-size: 16px;
-  line-height: 1.875;
-  letter-spacing: 3%;
-  color: #757575;
-}
-
 .footer {
   padding: 60px 0;
   background-color: #2F303A;
