--- a/sass/components/_modal.scss
+++ b/sass/components/_modal.scss
@@ -1,4 +1,4 @@
-.backdrop {
+.modal {
     position: fixed;
     top: 0;
     left: 0;
@@ -10,178 +10,159 @@
     transition:
         opacity 250ms cubic-bezier(0.4, 0, 0.2, 1) 250ms,
         visibility 250ms cubic-bezier(0.4, 0, 0.2, 1) 250ms;
-}
 
-.backdrop.is-hidden {
-    opacity: 0;
-    pointer-events: none;
-    visibility: hidden;
-}
+    &--is-hidden {
+        opacity: 0;
+        pointer-events: none;
+        visibility: hidden;
+    }
 
-.backdrop.is-hidden .modal {
-    transform: translate(-50%, -50%) scale(0);
-}
+    &--is-hidden .modal__form {
+        transform: translate(-50%, -50%) scale(0);
+    }
 
-.no-scroll {
-    overflow: hidden;
-}
+    &__form {
+        max-width: 528px;
+        position: absolute;
+        top: 50%;
+        left: 50%;
+        background-color: white;
+        padding: 40px;
+        min-width: 400px;
+        min-height: 300px;
+        border-radius: 10px;
+        z-index: 11;
+        transform: translate(-50%, -50%) scale(1);
+        transition: opacity 250ms cubic-bezier(0.4, 0, 0.2, 1) 1000ms;
+    }
 
-.modal {
-    max-width: 528px;
-    position: absolute;
-    top: 50%;
-    left: 50%;
-    background-color: white;
-    padding: 40px;
-    min-width: 400px;
-    min-height: 300px;
-    border-radius: 10px;
-    z-index: 11;
-    transform: translate(-50%, -50%) scale(1);
-    transition: opacity 250ms cubic-bezier(0.4, 0, 0.2, 1) 1000ms;
-}
+    &__close {
+        position: absolute;
+        top: 10px;
+        right: 10px;
+        height: 30px;
+        width: 30px;
+        border-color: rgba(0, 0, 0, 0.1);
+        border-width: 1px;
+        border-style: solid;
+        border-radius: 50%;
+        display: flex;
+        align-items: center;
+        justify-content: center;
+        cursor: pointer;
+        transition-property: background-color, color, box-shadow;
+        transition-duration: 250ms;
+        transition-timing-function: cubic-bezier(0.4, 0, 0.2, 1);
+        transition-delay: 0;
+    }
 
-.modal.backdrop.is-hidden {
+    &__close:hover .modal__icon {
+        fill: #2196F3;
+    }
 
-    transform: translate(-50%, -50%) scale(0);
-}
+    &__header {
+        font-family: 'Roboto';
+        font-size: 20px;
+        font-weight: 700;
+        color: #212121;
+        letter-spacing: 3%;
+        padding-bottom: 10px;
+    }
 
-.modal-close {
-    position: absolute;
-    top: 10px;
-    right: 10px;
-    height: 30px;
-    width: 30px;
-    border-color: rgba(0, 0, 0, 0.1);
-    border-width: 1px;
-    border-style: solid;
-    border-radius: 50%;
-    display: flex;
-    align-items: center;
-    justify-content: center;
-    cursor: pointer;
-    transition-property: background-color, color, box-shadow;
-    transition-duration: 250ms;
-    transition-timing-function: cubic-bezier(0.4, 0, 0.2, 1);
-    transition-delay: 0;
-}
+    &__label {
+        display: flex;
+        flex-direction: column;
+        position: relative;
+        font-family: 'Roboto';
+        font-size: 12px;
+        font-weight: 400;
+        color: #757575;
+    }
 
-.modal-close:hover svg {
-    fill: #2196F3;
-}
+    &__label:has(input:focus) svg {
+        fill: #2196F3;
+    }
 
-.modal-header {
-    font-family: 'Roboto';
-    font-size: 20px;
-    font-weight: 700;
-    color: #212121;
-    letter-spacing: 3%;
-    padding-bottom: 10px;
-}
+    &__icon {
+        position: absolute;
+        top: 50%;
+        left: 10px;
+        transform: translateY(-50%);
+        fill: #212121;
+    }
 
-.modal-label {
-    display: flex;
-    flex-direction: column;
-    position: relative;
-    font-family: 'Roboto';
-    font-size: 12px;
-    font-weight: 400;
-    color: #757575;
-}
+    &__input {
+        margin-bottom: 14px;
+        padding: 10px 30px;
+        border-color: rgba(33, 33, 33, 0.2);
+        border-width: 1px;
+        border-radius: 3px;
+        border-style: solid;
+        margin-top: 5px;
+        transition-property: background-color, color, box-shadow;
+        transition-duration: 250ms;
+        transition-timing-function: cubic-bezier(0.4, 0, 0.2, 1);
+        transition-delay: 0;
+    }
 
-label>.icon {
-    position: absolute;
-    top: 50%;
-    left: 10px;
-    transform: translateY(-50%);
-    fill: #212121;
-}
+    &__input:focus {
+        border-color: #2196F3;
+        outline: none;
+    }
 
-input,
-textarea {
-    transition-property: background-color, color, box-shadow;
-    transition-duration: 250ms;
-    transition-timing-function: cubic-bezier(0.4, 0, 0.2, 1);
-    transition-delay: 0;
-}
+    &__checkbox-text {
+        font-family: 'Roboto';
+        font-size: 14px;
+        font-weight: 400;
+        color: #757575;
+        letter-spacing: 0.7px;
+        line-height: 1.71;
+        display: flex;
+        align-items: center;
 
-input:focus,
-textarea:focus {
-    border-color: #2196F3;
-    outline: none;
-}
+    }
 
-label.modal-label:has(input:focus) svg {
-    fill: #2196F3;
-}
+    &__checkbox {
+        appearance: none;
+        width: 16px;
+        height: 15px;
+        background-image: url("../images/icons/uncheck.svg");
+        position: relative;
+        margin-right: 9px;
+        border-radius: 2px;
+    }
 
+    &__checkbox:checked::after {
+        content: "";
+        position: absolute;
+        width: 16px;
+        height: 15px;
+        background-image: url("../images/icons/check.svg");
+    }
 
-.modal-input {
-    margin-bottom: 14px;
-    padding: 10px 30px;
-    border-color: rgba(33, 33, 33, 0.2);
-    border-width: 1px;
-    border-radius: 3px;
-    border-style: solid;
-    margin-top: 5px;
-}
+    &__checkbox-link {
+        color: #2196F3;
+        text-decoration: underline;
+        padding-left: 4px;
 
-.check {
-    appearance: none;
-    width: 16px;
-    height: 15px;
-    background-image: url("../images/icons/uncheck.svg");
-    position: relative;
-    margin-right: 9px;
-    border-radius: 2px;
-}
+    }
 
-.check:checked::after {
-    content: "";
-    position: absolute;
-    width: 16px;
-    height: 15px;
-    background-image: url("../images/icons/check.svg");
-}
+    &__btn {
+        display: block;
+        padding: 10px 20px;
+        background-color: #2196F3;
 
-.modal-checkbox-text {
-    font-family: 'Roboto';
-    font-size: 14px;
-    font-weight: 400;
-    color: #757575;
-    letter-spacing: 0.7px;
-    line-height: 1.71;
-    display: flex;
-    align-items: center;
+        color: #FFFFFF;
+        margin: 0 auto;
+        border-radius: 5px;
+        cursor: pointer;
+        border: none;
+        font-family: 'Roboto';
+        font-size: 16px;
+        font-weight: 700;
+        letter-spacing: 6%;
+        line-height: 1.9;
+        margin-top: 30px;
 
-}
-
-.modal-checkbox-text a {
-    color: #2196F3;
-    text-decoration: underline;
-    padding-left: 4px;
-
-}
-
-.modal-btn {
-    display: block;
-    padding: 10px 20px;
-    background-color: #2196F3;
-
-    color: #FFFFFF;
-    margin: 0 auto;
-    border-radius: 5px;
-    cursor: pointer;
-    border: none;
-    font-family: 'Roboto';
-    font-size: 16px;
-    font-weight: 700;
-    letter-spacing: 6%;
-    line-height: 1.9;
-    margin-top: 30px;
-
-}
-
-.is-visible {
-    display: block !important;
+    }
 }
