--- a/sass/components/_portfolio.scss
+++ b/sass/components/_portfolio.scss
@@ -1,100 +1,128 @@
 .portfolio {
     padding: 95px 0;
+
+    &__filters {
+        display: flex;
+        align-items: center;
+        justify-content: center;
+        padding-bottom: 51px;
+    }
+
+    &__filters-list {
+        display: flex;
+        column-gap: 8px;
+    }
+
+    &__filters-btn {
+        font-weight: 500;
+        font-size: 16px;
+        line-height: 1.625;
+        letter-spacing: 3%;
+        text-align: center;
+        color: $gray-text;
+        padding: 6px 22px;
+        background-color: #F5F4FA;
+        border: 0;
+        border-radius: 4px;
+        transition-property: background-color, color, box-shadow;
+        transition-duration: 250ms;
+        transition-timing-function: cubic-bezier(0.4, 0, 0.2, 1);
+
+    }
+
+    &__filters-btn:hover {
+        background-color: $blue-back;
+        color: #FFF;
+        box-shadow: 0 3px rgba(50, 50, 50, 0.3);
+    }
+
+
+    &__list {
+        display: flex;
+        flex-wrap: wrap;
+        margin: 0 auto;
+        row-gap: 30px;
+        justify-content: space-between;
+    }
+
+
+    &__item {
+        border: #EEEEEE 1px solid;
+        flex-basis: calc((100% - 60px) / 3);
+        transition-property: box-shadow;
+        transition-duration: 250ms;
+        transition-timing-function: cubic-bezier(0.4, 0, 0.2, 1);
+
+
+    }
+
+
+    &__item:hover {
+        box-shadow: 1px 4px rgba(0, 0, 0, 0.16);
+    }
+
+    &__border {
+        position: relative;
+        overflow: hidden;
+        transition-property: background-color, color, box-shadow;
+        transition-duration: 250ms;
+        transition-timing-function: cubic-bezier(0.4, 0, 0.2, 1);
+
+    }
+
+    &__border:hover .portfolio__overlay {
+        /* transform: translateY(0); */
+        animation: overlay_show 500ms cubic-bezier(0.250, 0.250, 0.695, 0.490) 0s 1 normal forwards;
+    }
+
+    &__img {
+        width: 100%;
+    }
+
+    &__overlay {
+        position: absolute;
+        top: 0;
+        left: 0;
+        width: 100%;
+        height: 100%;
+        transform: translateY(100%);
+        transition: transform 200ms ease-out;
+        color: #FFF;
+        background-color: rgba(33, 150, 243, 0.9);
+        display: flex;
+        align-items: center;
+        justify-content: center;
+        font-size: 18px;
+        letter-spacing: 0.54;
+        line-height: 1.6;
+        font-weight: 400;
+        padding: 22px;
+    }
+
+    &__block {
+        padding: 23px;
+    }
+
+
+    &__title {
+        font-weight: 700;
+        font-size: 18px;
+        line-height: 2;
+        letter-spacing: 6%;
+        color: $gray-text;
+    }
+
+    &__text {
+        font-weight: 400;
+        font-size: 16px;
+        line-height: 1.875;
+        letter-spacing: 3%;
+        color: $main-text;
+    }
 }
 
-.portfolio-filters {
-    display: flex;
-    align-items: center;
-    justify-content: center;
-    padding-bottom: 51px;
-}
-
-.portfolio-filters-list {
-    display: flex;
-    column-gap: 8px;
-}
 
 
-.portfolio-filters-btn {
-    font-weight: 500;
-    font-size: 16px;
-    line-height: 1.625;
-    letter-spacing: 3%;
-    text-align: center;
-    color: $gray-text;
-    padding: 6px 22px;
-    background-color: #F5F4FA;
-    border: 0;
-    border-radius: 4px;
-    transition-property: background-color, color, box-shadow;
-    transition-duration: 250ms;
-    transition-timing-function: cubic-bezier(0.4, 0, 0.2, 1);
-
-}
-
-.portfolio-filters-btn:hover {
-    background-color: $blue-back;
-    color: #FFF;
-    box-shadow: 0 3px rgba(50, 50, 50, 0.3);
-}
-
-
-.portfolio-list {
-    display: flex;
-    flex-wrap: wrap;
-    margin: 0 auto;
-    row-gap: 30px;
-    justify-content: space-between;
-}
-
-.portfolio-list-item {
-    border: #EEEEEE 1px solid;
-    flex-basis: calc((100% - 60px) / 3);
-    transition-property: box-shadow;
-    transition-duration: 250ms;
-    transition-timing-function: cubic-bezier(0.4, 0, 0.2, 1);
-
-
-}
-
-
-.portfolio-list-item:hover {
-    box-shadow: 1px 4px rgba(0, 0, 0, 0.16);
-}
-
-.portfolio-img-border {
-    position: relative;
-    overflow: hidden;
-    transition-property: background-color, color, box-shadow;
-    transition-duration: 250ms;
-    transition-timing-function: cubic-bezier(0.4, 0, 0.2, 1);
-
-}
-
-.overlay {
-    position: absolute;
-    top: 0;
-    left: 0;
-    width: 100%;
-    height: 100%;
-    transform: translateY(100%);
-    transition: transform 200ms ease-out;
-    color: #FFF;
-    background-color: rgba(33, 150, 243, 0.9);
-    display: flex;
-    align-items: center;
-    justify-content: center;
-    font-size: 18px;
-    letter-spacing: 0.54;
-    line-height: 1.6;
-    font-weight: 400;
-    padding: 22px;
-}
-
-.portfolio-img-border:hover .overlay {
-    /* transform: translateY(0); */
-    animation: overlay_show 500ms cubic-bezier(0.250, 0.250, 0.695, 0.490) 0s 1 normal forwards;
-}
 
 @keyframes overlay_show {
     0% {
@@ -116,28 +144,4 @@
     100% {
         transform: translateY(0);
     }
-}
-
-.portfolio-img {
-    width: 100%;
-}
-
-.portfolio-block-text {
-    padding: 23px;
-}
-
-.portfolio-title {
-    font-weight: 700;
-    font-size: 18px;
-    line-height: 2;
-    letter-spacing: 6%;
-    color: $gray-text;
-}
-
-.portfolio-text {
-    font-weight: 400;
-    font-size: 16px;
-    line-height: 1.875;
-    letter-spacing: 3%;
-    color: $main-text;
 }
