--- a/sass/components/_header.scss
+++ b/sass/components/_header.scss
@@ -8,61 +8,10 @@
         align-items: center;
     }
 
-    &__navigation {
-        display: flex;
-        align-items: center;
-        justify-content: space-between;
-    }
+    
 
-    &__menu {
-        color: $gray-text;
-        font-size: 14px;
-        font-family: Roboto;
-        font-weight: 500;
-        letter-spacing: 0.28px;
-        word-wrap: break-word;
-    }
-
-    &__menu-list {
-        display: flex;
-    }
-
-    &__menu-item {
-        margin-left: 50px;
-    }
-
-    &__menu-link {
-        font-size: 14px;
-        font-family: Roboto;
-        font-weight: 500;
-        letter-spacing: 0.28px;
-        word-wrap: break-word;
-        position: relative;
-        transition-property: color;
-        transition-duration: 250ms;
-        transition-timing-function: cubic-bezier(0.4, 0, 0.2, 1);
-
-        &::after {
-            content: "";
-            position: absolute;
-            top: 33px;
-            left: 0;
-            border-bottom: 4px solid $blue-back;
-            border-radius: 2px;
-            height: 100%;
-            width: 0;
-            transition: all 0.5s;
-        }
-
-        &:hover:after {
-            /* width: 100%; */
-            animation: navigation_underline 500ms cubic-bezier(0.250, 0.250, 0.695, 0.490) 0s 1 normal forwards;
-        }
-
-        &:hover {
-            color: $blue-back;
-        }
-    }
+   
+    
     &__contact {
         display: flex;
         font-size: 14px;
@@ -103,24 +52,14 @@
     }
 }
 
-@keyframes navigation_underline {
-    0% {
-        width: 0;
-    }
 
-    25% {
-        width: 25%;
-    }
 
-    50% {
-        width: 50%;
-    }
+.header-spacer {
+    display: flex;
+    align-items: center;
+    justify-content: space-between;
 
-    75% {
-        width: 75%;
-    }
-
-    100% {
-        width: 100%;
+    &__logo--studio {
+            color: black;
     }
 }
