--- a/sass/portfolio.scss
+++ b/sass/portfolio.scss
@@ -2,6 +2,8 @@
 @import "./base/common";
 @import "./components/logo";
 @import "./components/header";
+@import "./components/navi";
 @import "./components/portfolio";
 @import "./components/footer";
+
 
