--- a/css/main.css
+++ b/css/main.css
@@ -34,7 +34,7 @@ button > span {
   overflow: hidden;
 }
 
-.logo__part1 {
+.logo__web {
   color: #2196F3;
   font-size: 26px;
   font-family: Raleway;
@@ -43,16 +43,12 @@ button > span {
   word-wrap: break-word;
   margin-right: -5px;
 }
-.logo__part2 {
-  color: black;
+.logo__studio {
   font-size: 26px;
   font-family: Raleway;
   font-weight: 700;
   letter-spacing: 0.78px;
   word-wrap: break-word;
-}
-.logo__part2--white {
-  color: white;
 }
 
 .header {
@@ -63,54 +59,6 @@ button > span {
   display: flex;
   justify-content: space-between;
   align-items: center;
-}
-.header__navigation {
-  display: flex;
-  align-items: center;
-  justify-content: space-between;
-}
-.header__menu {
-  color: #212121;
-  font-size: 14px;
-  font-family: Roboto;
-  font-weight: 500;
-  letter-spacing: 0.28px;
-  word-wrap: break-word;
-}
-.header__menu-list {
-  display: flex;
-}
-.header__menu-item {
-  margin-left: 50px;
-}
-.header__menu-link {
-  font-size: 14px;
-  font-family: Roboto;
-  font-weight: 500;
-  letter-spacing: 0.28px;
-  word-wrap: break-word;
-  position: relative;
-  transition-property: color;
-  transition-duration: 250ms;
-  transition-timing-function: cubic-bezier(0.4, 0, 0.2, 1);
-}
-.header__menu-link::after {
-  content: "";
-  position: absolute;
-  top: 33px;
-  left: 0;
-  border-bottom: 4px solid #2196F3;
-  border-radius: 2px;
-  height: 100%;
-  width: 0;
-  transition: all 0.5s;
-}
-.header__menu-link:hover:after {
-  /* width: 100%; */
-  animation: navigation_underline 500ms cubic-bezier(0.25, 0.25, 0.695, 0.49) 0s 1 normal forwards;
-}
-.header__menu-link:hover {
-  color: #2196F3;
 }
 .header__contact {
   display: flex;
@@ -147,6 +95,66 @@ button > span {
   transition-property: fill;
   transition-duration: 250ms;
   transition-timing-function: cubic-bezier(0.4, 0, 0.2, 1);
+}
+
+.header-spacer {
+  display: flex;
+  align-items: center;
+  justify-content: space-between;
+}
+.header-spacer__logo--studio {
+  color: black;
+}
+
+.navigation {
+  color: #212121;
+  font-size: 14px;
+  font-family: Roboto;
+  font-weight: 500;
+  letter-spacing: 0.28px;
+  word-wrap: break-word;
+}
+
+.navigation-list {
+  display: flex;
+}
+.navigation-list__item {
+  margin-left: 50px;
+}
+.navigation-list__link {
+  font-size: 14px;
+  font-family: Roboto;
+  font-weight: 500;
+  letter-spacing: 0.28px;
+  word-wrap: break-word;
+  position: relative;
+  transition-property: color;
+  transition-duration: 250ms;
+  transition-timing-function: cubic-bezier(0.4, 0, 0.2, 1);
+}
+.navigation-list__link::after {
+  content: "";
+  position: absolute;
+  top: 33px;
+  left: 0;
+  border-bottom: 4px solid #2196F3;
+  border-radius: 2px;
+  height: 100%;
+  width: 0;
+  transition: all 0.5s;
+}
+.navigation-list__link:hover:after {
+  /* width: 100%; */
+  animation: navigation_underline 500ms cubic-bezier(0.25, 0.25, 0.695, 0.49) 0s 1 normal forwards;
+}
+.navigation-list__link:hover {
+  color: #2196F3;
+}
+.navigation-list__item--active {
+  color: #2196F3;
+}
+.navigation-list__item--active .navigation-list__link::after {
+  width: 100%;
 }
 
 @keyframes navigation_underline {
@@ -505,6 +513,10 @@ button > span {
   background-color: #2196F3;
   box-shadow: 0px 4px 4px 0px rgba(0, 0, 0, 0.15);
   cursor: pointer;
+}
+
+.footer-spacer__logo--studio {
+  color: white;
 }
 
 .modal {
