--- a/sass/components/_logo.scss
+++ b/sass/components/_logo.scss
@@ -1,5 +1,5 @@
 .logo {
-    &__part1 {
+    &__web {
         color: $blue-back;
         font-size: 26px;
         font-family: Raleway;
@@ -9,8 +9,7 @@
         margin-right: -5px;
     }
 
-    &__part2 {
-        color: black;
+    &__studio {
         font-size: 26px;
         font-family: Raleway;
         font-weight: 700;
@@ -18,7 +17,5 @@
         word-wrap: break-word;
     }
 
-    &__part2--white {
-        color: white;
-    }
+   
 }
