--- a/sass/main.scss
+++ b/sass/main.scss
@@ -2,6 +2,7 @@
 @import "./base/common";
 @import "./components/logo";
 @import "./components/header";
+@import "./components/navi";
 @import "./components/section-hero";
 @import "./components/section-feature";
 @import "./components/section-box";
