--- a/sass/portfolio.scss
+++ b/sass/portfolio.scss
@@ -1,5 +1,6 @@
 @import "./base/variables";
 @import "./base/common";
+@import "./components/social";
 @import "./components/logo";
 @import "./components/header";
 @import "./components/navi";
