--- a/css/portfolio.css
+++ b/css/portfolio.css
@@ -34,6 +34,37 @@ button > span {
   overflow: hidden;
 }
 
+.social-list {
+  display: flex;
+  align-items: center;
+  justify-content: center;
+  gap: 10px;
+}
+.social-list__link {
+  display: flex;
+  align-items: center;
+  justify-content: center;
+  width: 44px;
+  height: 44px;
+  border-radius: 50%;
+  transition-property: background-color, border-radius;
+  transition-duration: 1000ms;
+  transition-timing-function: cubic-bezier(0.4, 0, 0.2, 1);
+}
+.social-list__link:hover {
+  background-color: #2196F3;
+}
+.social-list__svg {
+  width: 20px;
+  height: 20px;
+  transition-property: fill;
+  transition-duration: 250ms;
+  transition-timing-function: cubic-bezier(0.4, 0, 0.2, 1);
+}
+.social-list__link:hover .social-list__svg {
+  fill: white;
+}
+
 .logo__web {
   color: #2196F3;
   font-size: 26px;
@@ -241,7 +272,7 @@ button > span {
 }
 .portfolio__overlay {
   position: absolute;
-  top: 0;
+  top: 1px;
   left: 0;
   width: 100%;
   height: 100%;
@@ -323,32 +354,13 @@ button > span {
   letter-spacing: 0.42px;
   text-transform: uppercase;
 }
-.footer__social-list {
-  display: flex;
-  align-items: center;
-  justify-content: center;
-  gap: 10px;
+.footer__social-list--margin20 {
   margin-top: 20px;
 }
-.footer__social-link {
-  display: flex;
-  align-items: center;
-  justify-content: center;
-  width: 44px;
-  height: 44px;
-  border-radius: 50%;
+.footer__social-list--dark {
   background-color: rgba(255, 255, 255, 0.1);
-  transition-property: background-color, border-radius;
-  transition-duration: 1000ms;
-  transition-timing-function: cubic-bezier(0.4, 0, 0.2, 1);
 }
-.footer__social-link:hover {
-  background-color: #2196F3;
-  border-radius: 50%;
-}
-.footer__social-svg {
-  width: 20px;
-  height: 20px;
+.footer__social-list--fill {
   fill: white;
 }
 .footer__form {
