--- a/sass/components/_portfolio.scss
+++ b/sass/components/_portfolio.scss
@@ -81,7 +81,7 @@
 
     &__overlay {
         position: absolute;
-        top: 0;
+        top: 1px;
         left: 0;
         width: 100%;
         height: 100%;
