--- a/sass/components/_section-team.scss
+++ b/sass/components/_section-team.scss
@@ -52,41 +52,43 @@
         margin-bottom: 16px;
     }
 
-    &__list-icon {
-        display: flex;
-        align-items: center;
-        justify-content: center;
-        gap: 10px;
-    }
+    // &__list-icon {
+    //     display: flex;
+    //     align-items: center;
+    //     justify-content: center;
+    //     gap: 10px;
+    // }
 
-    &__link {
-        display: flex;
-        align-items: center;
-        justify-content: center;
-        width: 44px;
-        height: 44px;
-        transition-property: background-color, border-radius;
-        transition-duration: 250ms;
-        transition-timing-function: cubic-bezier(0.4, 0, 0.2, 1);
+    // &__link {
+    //     display: flex;
+    //     align-items: center;
+    //     justify-content: center;
+    //     width: 44px;
+    //     height: 44px;
+    //     transition-property: background-color, border-radius;
+    //     transition-duration: 250ms;
+    //     transition-timing-function: cubic-bezier(0.4, 0, 0.2, 1);
 
-    }
+    // }
 
-    &__link:hover {
-        background-color: $blue-back;
-        border-radius: 50%;
-    }
+    // &__link:hover {
+    //     background-color: $blue-back;
+    //     border-radius: 50%;
+    // }
 
-    &__link:hover .team__svg {
-        fill: white;
-    }
+    // &__link:hover .team__svg {
+    //     fill: white;
+    // }
 
-    &__svg {
-        width: 20px;
-        height: 20px;
+    // &__svg {
+    //     width: 20px;
+    //     height: 20px;
+    //     fill: $icon-default;
+    //     transition-property: fill;
+    //     transition-duration: 250ms;
+    //     transition-timing-function: cubic-bezier(0.4, 0, 0.2, 1);
+    // }
+    &__social-list--fill {
         fill: $icon-default;
-        transition-property: fill;
-        transition-duration: 250ms;
-        transition-timing-function: cubic-bezier(0.4, 0, 0.2, 1);
     }
-
 }
