--- a/sass/main.scss
+++ b/sass/main.scss
@@ -6,6 +6,7 @@
 @import "./components/section-hero";
 @import "./components/section-feature";
 @import "./components/section-box";
+@import "./components/social";
 @import "./components/section-team";
 @import "./components/section-clients";
 @import "./components/footer";
