--- a/css/portfolio.css
+++ b/css/portfolio.css
@@ -26,12 +26,42 @@ button > span {
   vertical-align: middle;
 }
 
-button > span {
-  padding-right: 7px;
-}
-
 .no-scroll {
   overflow: hidden;
+}
+
+.button {
+  color: white;
+  font-size: 16px;
+  font-family: Roboto;
+  font-weight: 700;
+  line-height: 1.87;
+  letter-spacing: 0.96px;
+  word-wrap: break-word;
+  border: 0;
+  padding: 10px 32px;
+  border-radius: 4px;
+  background-color: #2196F3;
+  box-shadow: 0px 4px 4px 0px rgba(0, 0, 0, 0.15);
+  cursor: pointer;
+}
+.button--filters {
+  font-weight: 500;
+  line-height: 1.625;
+  letter-spacing: 3%;
+  text-align: center;
+  color: #212121;
+  padding: 6px 22px;
+  background-color: #F5F4FA;
+  transition-property: background-color, color, box-shadow;
+  transition-duration: 250ms;
+  transition-timing-function: cubic-bezier(0.4, 0, 0.2, 1);
+  box-shadow: none;
+}
+.button--filters:hover {
+  background-color: #2196F3;
+  color: #FFF;
+  box-shadow: 0 3px rgba(50, 50, 50, 0.3);
 }
 
 .social-list {
@@ -39,6 +69,9 @@ button > span {
   align-items: center;
   justify-content: center;
   gap: 10px;
+}
+.social-list--footer {
+  justify-content: left;
 }
 .social-list__link {
   display: flex;
@@ -64,6 +97,15 @@ button > span {
 .social-list__link:hover .social-list__svg {
   fill: white;
 }
+.social-list__svg--team {
+  fill: #AFB1B8;
+}
+.social-list__link--footer {
+  background-color: rgba(255, 255, 255, 0.1);
+}
+.social-list__svg--footer {
+  fill: white;
+}
 
 .logo__web {
   color: #2196F3;
@@ -81,6 +123,9 @@ button > span {
   letter-spacing: 0.78px;
   word-wrap: break-word;
 }
+.logo__studio--header {
+  color: #000;
+}
 
 .header {
   padding: 25px 0;
@@ -91,23 +136,24 @@ button > span {
   justify-content: space-between;
   align-items: center;
 }
-.header__contact {
+
+.header-spacer {
+  display: flex;
+  align-items: center;
+  justify-content: space-between;
+}
+
+.header-contact {
   display: flex;
   font-size: 14px;
   font-family: Roboto;
   font-weight: 500;
   letter-spacing: 0.28px;
   word-wrap: break-word;
+  -moz-column-gap: 50px;
+       column-gap: 50px;
 }
-.header__contact-list {
-  display: flex;
-  width: 100%;
-  justify-content: flex-end;
-}
-.header__contact-item {
-  margin-left: 50px;
-}
-.header__contact-link {
+.header-contact__link {
   display: flex;
   gap: 10px;
   align-items: center;
@@ -115,26 +161,17 @@ button > span {
   transition-duration: 250ms;
   transition-timing-function: cubic-bezier(0.4, 0, 0.2, 1);
 }
-.header__contact-link:hover {
+.header-contact__link:hover {
   color: #2196F3;
 }
-.header__contact-link:hover .header__contact-svg {
+.header-contact__link:hover .header-contact__svg {
   fill: #2196F3;
 }
-.header__contact-svg {
+.header-contact__svg {
   fill: #757575;
   transition-property: fill;
   transition-duration: 250ms;
   transition-timing-function: cubic-bezier(0.4, 0, 0.2, 1);
-}
-
-.header-spacer {
-  display: flex;
-  align-items: center;
-  justify-content: space-between;
-}
-.header-spacer__logo--studio {
-  color: black;
 }
 
 .navigation {
@@ -219,93 +256,6 @@ button > span {
   -moz-column-gap: 8px;
        column-gap: 8px;
 }
-.portfolio__filters-btn {
-  font-weight: 500;
-  font-size: 16px;
-  line-height: 1.625;
-  letter-spacing: 3%;
-  text-align: center;
-  color: #212121;
-  padding: 6px 22px;
-  background-color: #F5F4FA;
-  border: 0;
-  border-radius: 4px;
-  transition-property: background-color, color, box-shadow;
-  transition-duration: 250ms;
-  transition-timing-function: cubic-bezier(0.4, 0, 0.2, 1);
-}
-.portfolio__filters-btn:hover {
-  background-color: #2196F3;
-  color: #FFF;
-  box-shadow: 0 3px rgba(50, 50, 50, 0.3);
-}
-.portfolio__list {
-  display: flex;
-  flex-wrap: wrap;
-  margin: 0 auto;
-  row-gap: 30px;
-  justify-content: space-between;
-}
-.portfolio__item {
-  border: #EEEEEE 1px solid;
-  flex-basis: calc((100% - 60px) / 3);
-  transition-property: box-shadow;
-  transition-duration: 250ms;
-  transition-timing-function: cubic-bezier(0.4, 0, 0.2, 1);
-}
-.portfolio__item:hover {
-  box-shadow: 1px 4px rgba(0, 0, 0, 0.16);
-}
-.portfolio__border {
-  position: relative;
-  overflow: hidden;
-  transition-property: background-color, color, box-shadow;
-  transition-duration: 250ms;
-  transition-timing-function: cubic-bezier(0.4, 0, 0.2, 1);
-}
-.portfolio__border:hover .portfolio__overlay {
-  /* transform: translateY(0); */
-  animation: overlay_show 500ms cubic-bezier(0.25, 0.25, 0.695, 0.49) 0s 1 normal forwards;
-}
-.portfolio__img {
-  width: 100%;
-}
-.portfolio__overlay {
-  position: absolute;
-  top: 1px;
-  left: 0;
-  width: 100%;
-  height: 100%;
-  transform: translateY(100%);
-  transition: transform 200ms ease-out;
-  color: #FFF;
-  background-color: rgba(33, 150, 243, 0.9);
-  display: flex;
-  align-items: center;
-  justify-content: center;
-  font-size: 18px;
-  letter-spacing: 0.54;
-  line-height: 1.6;
-  font-weight: 400;
-  padding: 22px;
-}
-.portfolio__block {
-  padding: 23px;
-}
-.portfolio__title {
-  font-weight: 700;
-  font-size: 18px;
-  line-height: 2;
-  letter-spacing: 6%;
-  color: #212121;
-}
-.portfolio__text {
-  font-weight: 400;
-  font-size: 16px;
-  line-height: 1.875;
-  letter-spacing: 3%;
-  color: #757575;
-}
 
 @keyframes overlay_show {
   0% {
@@ -324,15 +274,90 @@ button > span {
     transform: translateY(0);
   }
 }
+.portfolio-list {
+  display: flex;
+  flex-wrap: wrap;
+  margin: 0 auto;
+  row-gap: 30px;
+  justify-content: space-between;
+}
+.portfolio-list__item {
+  border: #EEEEEE 1px solid;
+  flex-basis: calc((100% - 60px) / 3);
+  transition-property: box-shadow;
+  transition-duration: 250ms;
+  transition-timing-function: cubic-bezier(0.4, 0, 0.2, 1);
+}
+.portfolio-list__item:hover {
+  box-shadow: 1px 4px rgba(0, 0, 0, 0.16);
+}
+.portfolio-list__border {
+  position: relative;
+  overflow: hidden;
+  transition-property: background-color, color, box-shadow;
+  transition-duration: 250ms;
+  transition-timing-function: cubic-bezier(0.4, 0, 0.2, 1);
+}
+.portfolio-list__border:hover .portfolio-list__overlay {
+  /* transform: translateY(0); */
+  animation: overlay_show 500ms cubic-bezier(0.25, 0.25, 0.695, 0.49) 0s 1 normal forwards;
+}
+.portfolio-list__img {
+  width: 100%;
+}
+.portfolio-list__overlay {
+  position: absolute;
+  top: 1px;
+  left: 0;
+  width: 100%;
+  height: 100%;
+  transform: translateY(100%);
+  transition: transform 200ms ease-out;
+  color: #FFF;
+  background-color: rgba(33, 150, 243, 0.9);
+  display: flex;
+  align-items: center;
+  justify-content: center;
+  font-size: 18px;
+  letter-spacing: 0.54;
+  line-height: 1.6;
+  font-weight: 400;
+  padding: 22px;
+}
+.portfolio-list__block {
+  padding: 23px;
+}
+.portfolio-list__title {
+  font-weight: 700;
+  font-size: 18px;
+  line-height: 2;
+  letter-spacing: 6%;
+  color: #212121;
+}
+.portfolio-list__text {
+  font-weight: 400;
+  font-size: 16px;
+  line-height: 1.875;
+  letter-spacing: 3%;
+  color: #757575;
+}
+
 .footer {
   padding: 60px 0;
   background-color: #2F303A;
 }
 .footer__container {
   display: flex;
-  gap: 95px;
 }
-.footer__contact {
+
+.footer-contacts {
+  flex-basis: 25%;
+}
+.footer-contacts__logo--studio {
+  color: white;
+}
+
+.address {
   color: rgba(255, 255, 255, 0.6);
   font-size: 14px;
   font-family: Roboto;
@@ -341,11 +366,29 @@ button > span {
   letter-spacing: 0.42px;
   word-wrap: break-word;
 }
-.footer__contact--white {
+.address__city {
   color: white;
   margin-top: 20px;
 }
-.footer__social-text {
+
+.footer-join {
+  flex-basis: 25%;
+}
+.footer-join__title {
+  color: white;
+  font-size: 14px;
+  font-family: Roboto;
+  font-weight: 700;
+  line-height: 1.71;
+  letter-spacing: 0.42px;
+  text-transform: uppercase;
+  margin-bottom: 20px;
+}
+
+.footer-subscribe {
+  flex-basis: 50%;
+}
+.footer-subscribe__title {
   color: white;
   font-size: 14px;
   font-family: Roboto;
@@ -354,20 +397,12 @@ button > span {
   letter-spacing: 0.42px;
   text-transform: uppercase;
 }
-.footer__social-list--margin20 {
-  margin-top: 20px;
-}
-.footer__social-list--dark {
-  background-color: rgba(255, 255, 255, 0.1);
-}
-.footer__social-list--fill {
-  fill: white;
-}
-.footer__form {
+
+.footer-form {
   margin-top: 20px;
   display: flex;
 }
-.footer__input {
+.footer-form__input {
   background: transparent;
   border: 1px solid rgba(255, 255, 255, 0.3);
   border-radius: 4px;
@@ -376,23 +411,10 @@ button > span {
   line-height: 1.25;
   margin-right: 12px;
   color: rgba(255, 255, 255, 0.6);
+  flex-basis: 60%;
 }
-.footer__btn {
-  color: white;
-  font-size: 16px;
-  font-family: Roboto;
-  font-weight: 700;
-  line-height: 1.87;
-  letter-spacing: 0.96px;
-  word-wrap: break-word;
-  border: 0;
-  padding: 10px 32px;
-  border-radius: 4px;
-  background-color: #2196F3;
-  box-shadow: 0px 4px 4px 0px rgba(0, 0, 0, 0.15);
-  cursor: pointer;
-}
-
-.footer-spacer__logo--studio {
-  color: white;
+.footer-form__svg {
+  width: 20px;
+  height: 20px;
+  fill: white;
 }/*# sourceMappingURL=portfolio.css.map */
