--- a/sass/base/_variables.scss
+++ b/sass/base/_variables.scss
@@ -3,3 +3,14 @@ $gray-text: #212121;
 $blue-back: #2196F3;
 $footer-back: #2F303A;
 $icon-default: #AFB1B8;
+$logo-studio:#000;
+$feature-item-back:#F5F4FA;
+$box-back:rgba(47, 48, 58, 0.8);
+$white:white;
+$team-box-shadow:rgba(0, 0, 0, 0.2);
+$cubic:cubic-bezier(0.4, 0, 0.2, 1);
+$address-color: rgba(255, 255, 255, 0.60);
+$footer-social-back:  rgba(255, 255, 255, 0.1);
+$button-shadow:rgba(0, 0, 0, 0.15);
+$input-border-color:rgba(255, 255, 255, 0.3);
+$input-color:rgba(255, 255, 255, 0.6);
