--- a/sass/components/_footer.scss
+++ b/sass/components/_footer.scss
@@ -4,27 +4,49 @@
 
     &__container {
         display: flex;
-        gap: 95px;
     }
+  
+}
 
-
-    &__contact {
-        color: rgba(255, 255, 255, 0.60);
+.footer-contacts{
+    flex-basis:25%;
+    &__logo--studio {
+        color: $white;
+    }
+}
+.address {
+     
+        color:$address-color;
         font-size: 14px;
         font-family: Roboto;
         font-weight: 400;
         line-height: 1.71;
         letter-spacing: 0.42px;
         word-wrap: break-word;
-    }
-
-    &__contact--white {
-        color: white;
+    
+    &__city {
+        color: $white;
         margin-top: 20px;
     }
+}
+.footer-join {
+    flex-basis:25%;
+    &__title {
+        color: $white;
+        font-size: 14px;
+        font-family: Roboto;
+        font-weight: 700;
+        line-height: 1.71;
+        letter-spacing: 0.42px;
+        text-transform: uppercase;
+        margin-bottom: 20px;
+    }
 
-    &__social-text {
-        color: white;
+}
+.footer-subscribe {
+    flex-basis:50%;
+    &__title {
+        color: $white;
         font-size: 14px;
         font-family: Roboto;
         font-weight: 700;
@@ -32,55 +54,30 @@
         letter-spacing: 0.42px;
         text-transform: uppercase;
     }
-
-    &__social-list--margin20 {
-        margin-top: 20px;
-    }
-
-    &__social-list--dark {
-        background-color: rgba(255, 255, 255, 0.1);
-    }
-
-    &__social-list--fill {
-        fill: white;
-    }
-
-    &__form {
+}
+.footer-form {
+    
         margin-top: 20px;
         display: flex;
-    }
+    
 
     &__input {
         background: transparent;
-        border: 1px solid rgba(255, 255, 255, 0.3);
+        border: 1px solid $input-border-color;
         border-radius: 4px;
         padding: 16px;
         font-size: 16px;
         line-height: 1.25;
         margin-right: 12px;
-        color: rgba(255, 255, 255, 0.6);
+        color: $input-color;
+        flex-basis: 60%;
     }
 
-    &__btn {
-        color: white;
-        font-size: 16px;
-        font-family: Roboto;
-        font-weight: 700;
-        line-height: 1.87;
-        letter-spacing: 0.96px;
-        word-wrap: break-word;
-        border: 0;
-        padding: 10px 32px;
-        border-radius: 4px;
-        background-color: $blue-back;
-        box-shadow: 0px 4px 4px 0px rgba(0, 0, 0, 0.15);
-        cursor: pointer;
+  
+    &__svg {
+        width: 20px;
+        height: 20px;
+       fill: $white;
     }
 
-}
-
-.footer-spacer {
-    &__logo--studio {
-        color: white;
-    }
 }
