--- a/sass/components/_header.scss
+++ b/sass/components/_header.scss
@@ -7,59 +7,44 @@
         justify-content: space-between;
         align-items: center;
     }
-
-    
-
-   
-    
-    &__contact {
-        display: flex;
-        font-size: 14px;
-        font-family: Roboto;
-        font-weight: 500;
-        letter-spacing: 0.28px;
-        word-wrap: break-word;
-    }
-    &__contact-list {
-        display: flex;
-        width: 100%;
-        justify-content: flex-end;
-    }
-    &__contact-item {
-        margin-left: 50px;
-    }
-    &__contact-link {
-        display: flex;
-        gap: 10px;
-        align-items: center;
-        transition-property: color;
-        transition-duration: 250ms;
-        transition-timing-function: cubic-bezier(0.4, 0, 0.2, 1);
-    
-        &:hover {
-            color: $blue-back;
-        }
-    
-        &:hover .header__contact-svg {
-            fill: $blue-back;
-        }
-    }
-    &__contact-svg {
-        fill: $main-text;
-        transition-property: fill;
-        transition-duration: 250ms;
-        transition-timing-function: cubic-bezier(0.4, 0, 0.2, 1);
-    }
 }
-
-
 
 .header-spacer {
     display: flex;
     align-items: center;
     justify-content: space-between;
+}
 
-    &__logo--studio {
-            color: black;
+.header-contact {
+    display: flex;
+    font-size: 14px;
+    font-family: Roboto;
+    font-weight: 500;
+    letter-spacing: 0.28px;
+    word-wrap: break-word;
+    column-gap: 50px;
+
+    &__link {
+        display: flex;
+        gap: 10px;
+        align-items: center;
+        transition-property: color;
+        transition-duration: 250ms;
+        transition-timing-function: $cubic;
+
+        &:hover {
+            color: $blue-back;
+        }
+
+        &:hover .header-contact__svg {
+            fill: $blue-back;
+        }
+    }
+    
+    &__svg {
+        fill: $main-text;
+        transition-property: fill;
+        transition-duration: 250ms;
+        transition-timing-function: $cubic;
     }
 }
