--- a/sass/components/_modal.scss
+++ b/sass/components/_modal.scss
@@ -8,8 +8,8 @@
     z-index: 10;
     opacity: 1;
     transition:
-        opacity 250ms cubic-bezier(0.4, 0, 0.2, 1) 250ms,
-        visibility 250ms cubic-bezier(0.4, 0, 0.2, 1) 250ms;
+        opacity 250ms $cubic 250ms,
+        visibility 250ms $cubic 250ms;
 
     &--is-hidden {
         opacity: 0;
@@ -26,14 +26,14 @@
         position: absolute;
         top: 50%;
         left: 50%;
-        background-color: white;
+        background-color: $white;
         padding: 40px;
         min-width: 400px;
         min-height: 300px;
         border-radius: 10px;
         z-index: 11;
         transform: translate(-50%, -50%) scale(1);
-        transition: opacity 250ms cubic-bezier(0.4, 0, 0.2, 1) 1000ms;
+        transition: opacity 250ms $cubic 1000ms;
     }
 
     &__close {
@@ -52,7 +52,7 @@
         cursor: pointer;
         transition-property: background-color, color, box-shadow;
         transition-duration: 250ms;
-        transition-timing-function: cubic-bezier(0.4, 0, 0.2, 1);
+        transition-timing-function: $cubic;
         transition-delay: 0;
     }
 
@@ -101,7 +101,7 @@
         margin-top: 5px;
         transition-property: background-color, color, box-shadow;
         transition-duration: 250ms;
-        transition-timing-function: cubic-bezier(0.4, 0, 0.2, 1);
+        transition-timing-function: $cubic;
         transition-delay: 0;
     }
 
