--- a/sass/components/_navi.scss
+++ b/sass/components/_navi.scss
@@ -23,7 +23,7 @@
         position: relative;
         transition-property: color;
         transition-duration: 250ms;
-        transition-timing-function: cubic-bezier(0.4, 0, 0.2, 1);
+        transition-timing-function: $cubic;
 
         &::after {
             content: "";
