--- a/sass/components/_portfolio.scss
+++ b/sass/components/_portfolio.scss
@@ -13,37 +13,42 @@
         column-gap: 8px;
     }
 
-    &__filters-btn {
-        font-weight: 500;
-        font-size: 16px;
-        line-height: 1.625;
-        letter-spacing: 3%;
-        text-align: center;
-        color: $gray-text;
-        padding: 6px 22px;
-        background-color: #F5F4FA;
-        border: 0;
-        border-radius: 4px;
-        transition-property: background-color, color, box-shadow;
-        transition-duration: 250ms;
-        transition-timing-function: cubic-bezier(0.4, 0, 0.2, 1);
+    
+}
 
+
+
+
+@keyframes overlay_show {
+    0% {
+        transform: translateY(100%);
     }
 
-    &__filters-btn:hover {
-        background-color: $blue-back;
-        color: #FFF;
-        box-shadow: 0 3px rgba(50, 50, 50, 0.3);
+    25% {
+        transform: translateY(75%);
     }
 
+    50% {
+        transform: translateY(50%);
+    }
 
-    &__list {
+    75% {
+        transform: translateY(25%);
+    }
+
+    100% {
+        transform: translateY(0);
+    }
+}
+
+.portfolio-list {
+    
         display: flex;
         flex-wrap: wrap;
         margin: 0 auto;
         row-gap: 30px;
         justify-content: space-between;
-    }
+    
 
 
     &__item {
@@ -51,7 +56,7 @@
         flex-basis: calc((100% - 60px) / 3);
         transition-property: box-shadow;
         transition-duration: 250ms;
-        transition-timing-function: cubic-bezier(0.4, 0, 0.2, 1);
+        transition-timing-function: $cubic;
 
 
     }
@@ -66,11 +71,11 @@
         overflow: hidden;
         transition-property: background-color, color, box-shadow;
         transition-duration: 250ms;
-        transition-timing-function: cubic-bezier(0.4, 0, 0.2, 1);
+        transition-timing-function: $cubic;
 
     }
 
-    &__border:hover .portfolio__overlay {
+    &__border:hover .portfolio-list__overlay {
         /* transform: translateY(0); */
         animation: overlay_show 500ms cubic-bezier(0.250, 0.250, 0.695, 0.490) 0s 1 normal forwards;
     }
@@ -118,30 +123,5 @@
         line-height: 1.875;
         letter-spacing: 3%;
         color: $main-text;
-    }
-}
-
-
-
-
-@keyframes overlay_show {
-    0% {
-        transform: translateY(100%);
-    }
-
-    25% {
-        transform: translateY(75%);
-    }
-
-    50% {
-        transform: translateY(50%);
-    }
-
-    75% {
-        transform: translateY(25%);
-    }
-
-    100% {
-        transform: translateY(0);
     }
 }
