--- a/sass/components/_section-box.scss
+++ b/sass/components/_section-box.scss
@@ -4,7 +4,6 @@
     &__container {
         text-align: center;
     }
-
     &__title {
         color: $gray-text;
         font-size: 36px;
@@ -15,10 +14,14 @@
         margin-bottom: 50px;
     }
 
-    &__list {
+ 
+}
+.box-list {
+    
+     
         display: flex;
         justify-content: space-between;
-    }
+    
 
     &__item {
         position: relative;
@@ -37,17 +40,13 @@
         z-index: 5;
         left: 0;
         width: 100%;
-        color: white;
+        color: $white;
         text-align: center;
         padding: 30px 0;
-        background-color: rgba(47, 48, 58, 0.8);
+        background-color: $box-back;
         text-transform: uppercase;
         bottom: 0;
         font-size: 14px;
         font-weight: 700;
     }
 }
-// figure.image {
-//     display: inline-block;
-//     position: relative;
-// }
