--- a/sass/components/_section-clients.scss
+++ b/sass/components/_section-clients.scss
@@ -18,12 +18,15 @@
     }
 
 
-    &__list {
+
+}
+.clients-list {
+   
         display: flex;
         gap: 30px;
         align-items: center;
         justify-content: center;
-    }
+
 
 
     &__link {
@@ -36,7 +39,7 @@
         justify-content: center;
         transition-property: border-color;
         transition-duration: 250ms;
-        transition-timing-function: cubic-bezier(0.4, 0, 0.2, 1);
+        transition-timing-function: $cubic;
 
     }
 
@@ -48,11 +51,11 @@
         fill: $icon-default;
         transition-property: fill;
         transition-duration: 250ms;
-        transition-timing-function: cubic-bezier(0.4, 0, 0.2, 1);
+        transition-timing-function: $cubic;
     }
 
 
-    &__link:hover .clients__svg {
+    &__link:hover .clients-list__svg {
         fill: $blue-back;
     }
 
