--- a/sass/components/_section-hero.scss
+++ b/sass/components/_section-hero.scss
@@ -10,7 +10,7 @@
     background-size: cover;
 
     &__title {
-        color: white;
+        color: $white;
         font-size: 44px;
         font-family: Roboto;
         font-weight: 900;
@@ -19,21 +19,5 @@
         letter-spacing: 2.64px;
         word-wrap: break-word;
         margin-bottom: 30px;
-    }
-
-    &__btn {
-        color: white;
-        font-size: 16px;
-        font-family: Roboto;
-        font-weight: 700;
-        line-height: 1.87;
-        letter-spacing: 0.96px;
-        word-wrap: break-word;
-        border: 0;
-        padding: 10px 32px;
-        border-radius: 4px;
-        background-color: $blue-back;
-        box-shadow: 0px 4px 4px 0px rgba(0, 0, 0, 0.15);
-        cursor: pointer;
     }
 }
