--- a/sass/main.scss
+++ b/sass/main.scss
@@ -1,5 +1,6 @@
 @import "./base/variables";
 @import "./base/common";
+@import "./components/button";
 @import "./components/logo";
 @import "./components/header";
 @import "./components/navi";
